JQueryPlugin/pub/System/JQueryPlugin/plugins/tabpane/jquery.tabpane.uncompressed.css
.foswikiFormSteps .jqTabPane {
  margin:0px;
}
.jqTabPane form {
  margin:0px;
  padding:0px;
}
.jqTab {
  display:none; /* switched on by plugin */
  border:1px solid #BDBEC5;
  padding:0px;
  margin:0px;
}
.jqTab.current {
  display:block;
}
.jqTabContents {
  padding:8px;
}
ul.jqTabGroup {
  margin:0px !important;
  padding:0px !important;
  list-style:none;
  display:block;
  float:left;
  _padding-top:1px !important; /* IE6 fix */
}
*:first-child+html ul.jqTabGroup { /* IE7 fix */
  height:23px;
}
ul.jqTabGroup li {
  background-color: transparent;
  background-image: url('tab_right.png') !important;
  _background-image: url('tab_right.gif') !important; /* IE6 */
  background-repeat: no-repeat !important;
  background-position: right top !important;
  float:left;
  padding:0px 3px 0px 0px !important;
  margin:0px 4px -1px 0px !important;
  height:29px;
  line-height:100%;
  list-style:none !important;
}
ul.jqTabGroup a:active,
ul.jqTabGroup a:hover,
ul.jqTabGroup a:link,
ul.jqTabGroup a {
  text-decoration: none !important;
  white-space:nowrap;
  background-color:transparent !important;
  background-image: url('tab_left.png') !important;
  _background-image: url('tab_left.gif') !important; /* IE6 */
  background-repeat:no-repeat !important;
  background-position:left top !important; 
  color:black;
  float:left;
  display:block;
  margin:0px 0px 0px 0px !important;
  padding:4px 8px 0px 18px !important;
  height:25px;
  font-size:12px;
}
ul.jqTabGroup a:active,
ul.jqTabGroup a:hover,
ul.jqTabGroup a:focus {
  color:red !important;
}
ul.jqTabGroup li.current {
  background-image: url('tab_right_on.png') !important; 
  _background-image: url('tab_right_on.gif') !important;  /* IE 6 */
  background-color: white;
}
.foswikiFormSteps ul.jqTabGroup li.current {
  background-color: inherit;
}

ul.jqTabGroup li.current a:active,
ul.jqTabGroup li.current a:hover,
ul.jqTabGroup li.current a {
  background-image: url('tab_left_on.png') !important;
  _background-image: url('tab_left_on.gif') !important; /* IE 6 */
  color: #333;
}

.jqTabPane .fltMakeIndexWrapper {
  margin:0px;
}

.jqAjaxLoader {
  background: url(../../images/spinner.gif) 0 0 no-repeat;
  height: 16px;
  width: 16px;
  display: block;
}

